@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="//group[@id='checkboxes']" position="inside">
+        <label name="unearned_revenue"/>
+        <field name="unearned_revenue"/>
+    </xpath>
+</data>
